--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.pzyko_solutions</groupId>
     <artifactId>security-optimus</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>Security Optimus Library</name>
     <description>Librería compartida de utilidades de seguridad para proyectos Optimus.</description>
@@ -36,13 +36,9 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/Chungm7/lib-security</url>
         </repository>
         <snapshotRepository>
             <id>github</id>
-            <name>GitHub Packages Snapshots</name>
-            <url>https://maven.pkg.github.com/Chungm7/lib-security</url>
         </snapshotRepository>
     </distributionManagement>
 
